<resources>
    <string name="app_name">Dance</string>
    <string name="action_settings">Settings</string>
    <string name="searchIfo">请输入你要搜索的内容</string>
    <string name="jianshencao">健身操</string>
    <string name="tuijian">推荐</string>
    <string name="minzuwu">民族舞</string>
    <string name="jiewu">街舞</string>
    <string name="xiandaiwu">现代舞</string>
    <string name="collect">收藏</string>
    <string name="history">历史记录</string>
    <string name="cache">本地缓存</string>
    <string name="set">设置</string>
    <string name="log">注册/登陆</string>
    <string name="create_room">创建房间</string>
    <string name="join_room">加入房间</string>
</resources>
