<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <ImageView android:id="@+id/head"
        android:layout_gravity="center"
        android:layout_height="90dp"
        android:layout_width="90dp"
        android:background="@drawable/bg_border"
        android:src="@drawable/boy"
        android:padding="3dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_marginTop="10dp"
        android:text="@string/log"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/button"
        android:background="@drawable/log_button"/>

</RelativeLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/collection_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/collection"
            android:layout_toRightOf="@+id/collection"
            android:text="@string/collect"
            android:textColor="@color/colorGray"
            android:textSize="18dp"/>
        <ImageView
            android:id="@+id/collection"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/collect"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/history_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/history"
            android:layout_toRightOf="@+id/history"
            android:text="@string/history"
            android:textColor="@color/colorGray"
            android:textSize="18dp"/>
        <ImageView
            android:id="@+id/history"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/history"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cache_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/cache"
            android:layout_toRightOf="@+id/cache"
            android:text="@string/cache"
            android:textColor="@color/colorGray"
            android:textSize="18dp"/>
        <ImageView
            android:id="@+id/cache"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/cache"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/set_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/set"
            android:layout_toRightOf="@+id/set"
            android:text="@string/set"
            android:textColor="@color/colorGray"
            android:textSize="18dp"/>
        <ImageView
            android:id="@+id/set"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setup"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/enter"/>
    </RelativeLayout>

</LinearLayout>
</LinearLayout>