<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 推荐区域 -->
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBright"
            android:padding="10dp"
            android:orientation="vertical">
            <!-- 显示文字“推荐” -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tuijian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuijian"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    />
                <Button
                    android:id="@+id/button1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/enter"
                    />
            </RelativeLayout>

            <!-- 用于滑动显示几张图片，点击后播放视频 -->
            <android.support.v4.view.ViewPager
                android:id="@+id/vptuijian"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/p2"/>
            <!-- 用于显示是否选中的点，目前有三个，可根据需要增加 -->
            <LinearLayout
                android:id="@+id/dotLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right|bottom"
                android:orientation="horizontal">
                <View
                    android:id="@+id/v_dota"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/dot" />
                <View
                    android:id="@+id/v_dota1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
                <View
                    android:id="@+id/v_dota2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />

            </LinearLayout>
        </LinearLayout>

        <!-- 分割线-->
        <View
            android:id="@+id/va1"
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:background="@color/colorWhite" />

        <!-- 健身操区域-->
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBright"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/jianshencao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jianshencao"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
                <Button
                    android:id="@+id/button2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/enter"
                    />
            </RelativeLayout>


            <android.support.v4.view.ViewPager
                android:id="@+id/vpjianshencao"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/p1"/>
            <LinearLayout
                android:id="@+id/dotLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right|bottom"
                android:orientation="horizontal"
                android:background="@color/colorBright">
                <View
                    android:id="@+id/v_dotb"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/dot" />
                <View
                    android:id="@+id/v_dotb1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
                <View
                    android:id="@+id/v_dotb2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
            </LinearLayout>
        </LinearLayout>
        <!-- 分割线-->
        <View
            android:id="@+id/va2"
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:background="@color/colorWhite" />
        <!-- 民族舞区域-->
        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBright"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/minzuwu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minzuwu"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
                <Button
                    android:id="@+id/button3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/enter"
                    />
            </RelativeLayout>
            <android.support.v4.view.ViewPager
                android:id="@+id/vpminzuwu"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/p2"/>
            <LinearLayout
                android:id="@+id/dotLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right|bottom"
                android:orientation="horizontal"
                android:background="@color/colorBright">
                <View
                    android:id="@+id/v_dotc"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/dot" />
                <View
                    android:id="@+id/v_dotc1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
                <View
                    android:id="@+id/v_dotc2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
            </LinearLayout>
        </LinearLayout>

        <!-- 分割线-->
        <View
            android:id="@+id/va3"
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:background="@color/colorWhite" />

        <!-- 街舞区域-->
        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBright"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/jiewu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jiewu"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
                <Button
                    android:id="@+id/button4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/enter"
                    />
            </RelativeLayout>
            <android.support.v4.view.ViewPager
                android:id="@+id/vpjiewu"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/p1"/>
            <LinearLayout
                android:id="@+id/dotLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right|bottom"
                android:orientation="horizontal"
                android:background="@color/colorBright">
                <View
                    android:id="@+id/v_dotd"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/dot" />
                <View
                    android:id="@+id/v_dotd1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
                <View
                    android:id="@+id/v_dotd2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
            </LinearLayout>
        </LinearLayout>
        <!-- 分割线-->
        <View
            android:id="@+id/va4"
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:background="@color/colorWhite" />
        <!-- 现代舞区域 -->
        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBright"
            android:padding="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/xiandaiwu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xiandaiwu"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
                <Button
                    android:id="@+id/button5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/enter"
                    />
            </RelativeLayout>
            <android.support.v4.view.ViewPager
                android:id="@+id/vpxiandaiwu"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/p2"/>
            <LinearLayout
                android:id="@+id/dotLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right|bottom"
                android:orientation="horizontal"
                android:background="@color/colorBright">
                <View
                    android:id="@+id/v_dote"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/dot" />
                <View
                    android:id="@+id/v_dote1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
                <View
                    android:id="@+id/v_dote2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@mipmap/dot_line" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>